引入消息队列，增强日志监控